--- a/windows/ClassLibrary1/MyUserControl1.xaml
+++ b/windows/ClassLibrary1/MyUserControl1.xaml
@@ -1,14 +1,15 @@
 ﻿<UserControl
-    x:Class="Rn.MyUserControl1"
+    x:Class="ClassLibrary1.MyUserControl1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Rn"
+    xmlns:local="using:ClassLibrary1"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-    <Grid Background="Blue">
 
+    <Grid>
+        <TextBlock>Text from ClassLibrary1.MyUserControl1 which is hosted in a XamlIslands</TextBlock>
     </Grid>
 </UserControl>
